src/test/deca/context/invalid/provided/duoreadint.deca

{int x = 2;
x = 5;
int y = readInt();
int z = readFloat() ; 
 z= y 
 print(z);
}

/*  Commentaire  */
